# FREDServer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
CI/: parser.sh  run_alfdummies.sh  run_dimclient.sh  run_dns.sh
config/: fred.conf
examples/MAPI/: README  README.md  mapiexample.cpp
examples/MAPI/Iterativemapi/: README.md  averagetemp.cpp  averagetemp.h  main.cpp
examples/MAPI/Mapigroup/: README.md  main.cpp  testgroup.cpp  testgroup.h
examples/MAPI/sections/: mapi_example.section
examples/SCA/sections/: ru_sca.section  vldb.section
examples/SWT/sections/: inner_barrel.section  power_boards.section
examples/config/: fred.conf
include/FREDServer/Alfred/: alfred.h  client.h  command.h  frontend.h  info.h  print.h  rpc.h  rpcinfo.h  service.h  types.h  wait.h
include/FREDServer/Fred/: alfclients.h  alfrpcinfo.h  crualfrpcinfo.h  cruregistercommand.h  dimutilities.h  fred.h  fredMode.h  fredtopics.h  global.h  groupcommand.h  mapiinterface.h  mappedcommand.h  queue.h  section.h  (+2 more)
include/dim/: dim.h
sections/: inner_barrel.section  mapi_example.section  power_boards.section
src/: main.cpp
src/Alfred/: alfred.cpp  client.cpp  command.cpp  frontend.cpp  info.cpp  print.cpp  rpc.cpp  rpcinfo.cpp  service.cpp  wait.cpp
src/Fred/: alfclients.cpp  alfinfo.cpp  alfrpcinfo.cpp  crualfrpcinfo.cpp  cruregistercommand.cpp  dimutilities.cpp  fred.cpp  fredtopics.cpp  groupcommand.cpp  mappedcommand.cpp  queue.cpp  selectcommand.cpp  subscribecommand.cpp
src/Mapi/: sampa_config.cpp
src/Parser/: calculator.cpp  parser.cpp  processmessage.cpp  utility.cpp
(+35 files in other folders)
